--- a/index.html
+++ b/index.html
@@ -2,50 +2,77 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Elméleti2</title>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
+  <title>CodePen - my first website</title>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<main>
-  <h1>Awesome Landing Page</h1>
-  <a href="about.html" target="_blank">Read about me</a>
-  <div class="key-features">
-    <div class="feature">
-      <img src="images/majom.jpg">
-      <p>Plant Trees</p>
+<header class="header">
+  <img src="http://stayathome-syllabus.greenfox.academy/week01/assets/first-website-header.png" alt="">
+  <p>Hi, My name is</br><span style="font-size: 68px;">Anakin Skywalker</span></p>
+</header>
+<section class="content">
+  <div class="container">
+    <div class="intro">
+      <p><strong>Analytical, goal oriented leader</strong> with proven track record in management and enforcement Space Fleet Operations or Frontend Development. Wide range of hands-on experience, including:</p>
+      <ul>
+        <li>Large scale construction projects oversight</li>
+        <li>Advanced forms of mind control</li>
+        <li>Planetary scale demolitions operations</li>
+        <li>Fugitive recovery services</li>
+      </ul>
+    <blockquote>Together we can rule the galaxy</blockquote>
+    <h2>Notable Achievements</h2>
+    <h3>Designed, built and piloted a custom pod racer. 32 BBY Boonta Eve Classic Race Champion</h3>
+    <p>In my spare time at Wald’s Parts junk shop I designed and built a Class III open cockpit Podracer capable of 588 mph top speed. Went on to win the Boonta Eve Classic race in 32 BBY - first ever win by a human. Generated documented company revenue of over 59 wupiupi during the course of my enslavement.</p>
+    <h3>Oversight of DS1 and DS2 Orbital Battle Stations construction projects</h3>
+    <p>During my tenure as a Supreme Imperial Fleet Commander I was in charge of large capital construction projects for the Deep Space Fleet. Performed acceptance testing of the DS1 SuperLaser in 0 BBY by annihilating Alderaan - a terrestrial class planet in the Core Worlds region. Successfully tripled the deep space fire power of the imperial fleet in accordance with the Tarkin Doctrine before losing both projects to run-away photon torpedoes.</p>
     </div>
-    <div class="feature">
-      <img src="https://github.com/green-fox-academy/stayathome-syllabus/blob/master/week01/assets/deal.png?raw=true">
-      <p>Make Friends</p>
-    </div>
-    <div class="feature">
-      <img src="https://github.com/green-fox-academy/stayathome-syllabus/blob/master/week01/assets/money.png?raw=true">
-      <p>Profit</p>
-    </div>
-    <div class="feature">
-      <img src="https://github.com/green-fox-academy/stayathome-syllabus/blob/master/week01/assets/deal.png?raw=true">
-      <p>Make Friends</p>
-    </div>
+    <blockquote>I find your lack of faith disturbing.</blockquote>
+    <h2>Experience</h2>
+    <h3>Sith Empire Headquarters, Dromund Kaas</h3>
+    <h4>Supreme Commander of Imperial Forces, Emperor’s Enforcer</h4>
+    <ul>
+      <li>As the right-hand man to Emperor Sidious, hunted down jedi survivors and enforced the will of the empire;</li>
+      <li>Oversaw construction of the first generation Death Star;</li>
+      <li>First ever Imperial Supreme Commander;</li>
+    </ul>
+    <h3>Wally’s Parts / Toyarian Watto junk shop, Mos Espa, Tatooine</h3>
+    <h4>Enslaved Volunteer</h4>
+    <ul>
+      <li>General help and front-desk retail operations at the junk shop, second hand droid parts, mechanical / droid repair services;</li>
+      <li>Designed and piloted custom-built Podracer, ran track-side operations for the podracing team;</li>
+    </ul>
+    <blockquote>When I left you, I was but the learner; now I am the master.</blockquote>
+    <h2>Formal training</h2>
+    <h3>Green Fox Academy, Earth</h3>
+    <h4>Full stack developer</h4>
+    <ul>
+      <li>Padawan to Knight Tojas;</li>
+      <li>Learned programming with a specialisation in JavaScript and Front-end technologies</li>
+    </ul>
+    <h3>Sith Empire, Coruscant</h3>
+    <h4>Master of the Dark Side of the Force</h4>
+    <ul>
+      <li>Apprentice to Sith Lord Darth Sidious;</li>
+    </ul>
+    <h3>Jedi Order Academy, Coruscant</h3>
+    <h4>Master of Jedi Force</h4>
+    <ul>
+      <li>Padawan to Knight Obi Wan Kenobi. Bodyguard to Senator Padme Amidala during the Clone Wars of 22 BBY;</li>
+      <li>Graduated with donors;</li>
+    </ul>
+    <div class="line"></div>
+    <h2>Personal interests</h2>
+    <ul>
+      <li>Midi-Chlorian research as a hobby;</li>
+      <li>Recreational mind-control techniques;</li>
+      <li>Amateur and local club podracing.</li>
+    </ul>
   </div>
-  <form class="newsletter-form">
-    <h2>Newsletter</h2>
-    <p>Sign up to our newsletter to receive awesome news about fresh air.</p>
-    <div>
-      <input type="text">
-    </div>
-    <div>
-      <input type="submit" value="Subscribe">
-    </div>
-    <input type="checkbox" id="tac">
-    <label for="tac">
-      I accept the <a href="http://example.org" target="_blank">terms and conditions</a>
-    </label>
-    <div class="exit-button">x</div>
-  </form>
-  <div class="question-button">?</div>
-</main>
+</section>
 <!-- partial -->
   
 </body>
